removed coverage from setup.py. Put the coverage requirements (added python-coveralls) in .travis.yml because that's really the only place it's needed

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,12 @@ python:
 
 install:
     - python setup.py --quiet install
+    - pip install coverage python-coveralls
 
 script:
     - python setup.py --quiet test
     - massedit --expression='line.replace("Copyright", "foobarfoobar")' LICENSE.txt | grep --quiet 'foobarfoobar'
 
 after_success:
-    - python -m coverage run --source massedit tests.py
+    - coverage run --source massedit tests.py
     - coveralls
