--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,7 @@
 environment:
     matrix:
         - PYTHON: Python27
+        - PYTHON: Python34
         - PYTHON: Python35
         - PYTHON: Python36
         - PYTHON: Python37
