Fixing CI issues
Removed Python 3.3 from github workflow (not supported)
Changed the setuptools test suite from tests.py to tests so it can be imported.

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ setup_requires =
 install_requires = 
     mock;python_version<="3.3"
 packages = .
-test_suite = tests.py
+test_suite = tests
 python_requires = >=2.7
 
 [entry_points]
@@ -80,12 +80,5 @@ deps =
 	.
 	pytest
 commands = pytest tests.py
-
-[testenv:docs]
-deps = 
-	sphinx
-	sphinx-autodoc-typehints
-	sphinx-rtd-theme
-commands = python setup.py build_sphinx
 
 [aliases]
