Attempts to fix appveyor build for 2.7
There seems to be a problem with the mock package. Going down to <4 to
see if it helps.

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ classifiers =
 setup_requires = 
     wheel
 install_requires = 
-    mock;python_version<="3.3"
+    mock<4;python_version<="3.3"
 packages = .
 test_suite = tests
 python_requires = >=2.7
