Added comment to explain the pin on mock<4
mock 4 does not support python 2.7.
retabbed. the file

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,19 +37,19 @@ classifiers =
 setup_requires = 
     wheel
 install_requires = 
-    mock<4;python_version<="3.3"
+    mock<4;python_version<="3.3"  # mock 4 does not support python 2.7
 packages = .
 test_suite = tests
 python_requires = >=2.7
 
 [entry_points]
 console_scripts = 
-	massedit=massedit:main
+    massedit=massedit:main
 
 [build-system]
 requires = 
-	setuptools >= 40.9.0
-	wheel
+    setuptools >= 40.9.0
+    wheel
 build-backend = "setuptools.build_meta"
 
 [bumpversion:file:setup.cfg]
@@ -76,9 +76,9 @@ isolated_build = True
 
 [testenv]
 deps = 
-	--prefer-binary
-	.
-	pytest
+    --prefer-binary
+    .
+    pytest
 commands = pytest tests.py
 
 [aliases]
