Added reference to README.rst in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,8 @@ version = 0.67.0
 author = elmotec
 author_email = elmotec@gmx.com
 description = Edit multiple files using Python text processing modules
+long-description = README.rst
+long-description-content-type = text/x-rst
 license = MIT
 keywords = sed editor stream python edit mass
 home-page = http://github.com/elmotec/massedit
