Fixed inconsistent version numbers between setup.cfg and massedit.py
Also removed unused bumpversion.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,7 @@
-[bumpversion]
-current_version = 0.67.0
-commit = False
-tag = False
-
 [metadata]
 name = massedit
 summary = SCM mining utility classes
-version = 0.67.0
+version = 0.69.0  # UPDATE massedit.py
 author = elmotec
 author_email = elmotec@gmx.com
 description = Edit multiple files using Python text processing modules
