Fixed comment that was added to the name of the dist file.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [metadata]
 name = massedit
 summary = SCM mining utility classes
-version = 0.69.0  # UPDATE massedit.py
+# UPDATE massedit.py
+version = 0.69.0
 author = elmotec
 author_email = elmotec@gmx.com
 description = Edit multiple files using Python text processing modules
