Fixed the long description
Also bumped version to 0.69.1

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,11 @@
 name = massedit
 summary = SCM mining utility classes
 # UPDATE massedit.py
-version = 0.69.0
+version = 0.69.1
 author = elmotec
 author_email = elmotec@gmx.com
 description = Edit multiple files using Python text processing modules
-long-description = README.rst
+long-description = file: README.rst
 long-description-content-type = text/x-rst
 license = MIT
 keywords = sed editor stream python edit mass
