--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
-[build-system]
-build-backend = '"setuptools.build_meta"'
-
 [project]
 name = "massedit"
 description = "Edit multiple files using Python text processing modules"
@@ -8,8 +5,14 @@ description = "Edit multiple files using Python text processing modules"
 version = "0.69.1"
 authors = [{name = "elmotec", email = "elmotec@gmx.com"}]
 license = {text = "MIT"}
-keywords = ["sed editor stream python edit mass"]
-requires-dist = "setuptools"
+keywords = [
+     "sed",
+     "editor",
+     "stream",
+     "python",
+     "edit",
+     "mass"
+]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "License :: OSI Approved :: MIT License",
@@ -36,28 +39,9 @@ requires-python = ">=2.7"
 file = "README.rst"
 content-type = "text/x-rst"
 
-[tool]
-aliases = {}
+[project.scripts]
+massedit='massedit:main'
 
-[tool.setuptools]
-packages = ["."]
-test-suite = "tests"
-include-package-data = false
-
-[tool.entry_points]
-console_scripts = """
-massedit=massedit:main"""
-
-[tool.bumpversion.file.setup.cfg]
-search = "version={current_version}"
-replace = "version={new_version}"
-
-[tool.bumpversion.file.massedit.py]
-search = '__version__ = "{current_version}"'
-replace = '__version__ = "{new_version}"'
-
-[tool.distutils.bdist_wheel]
-universal = 1
 
 [tool.flake8]
 exclude = "docs"
@@ -66,13 +50,6 @@ max-line-length = "119"
 [tool.isort]
 profile = "black"
 
-[tool.tox.tox]
-envlist = "py27, py36, py37, py38, py39"
-isolated_build = "True"
-
-[tool.testenv]
-deps = """
---prefer-binary
-.
-pytest"""
-commands = "pytest tests.py"
+[build-system]
+requires = ["setuptools"]
+build-backend = '"setuptools.build_meta"'
