fix extra quotes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,5 +51,5 @@ max-line-length = "119"
 profile = "black"
 
 [build-system]
+build-backend = "setuptools.build_meta"
 requires = ["setuptools"]
-build-backend = '"setuptools.build_meta"'
