--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,9 +7,9 @@ environment:
         - PYTHON: Python37
 
 install:
-    - C:\%PYTHON%\python.exe setup.py install
+    - C:\%PYTHON%\python.exe -m pip install .
 
 build: off
 
 test_script:
-    - C:\%PYTHON%\python.exe setup.py test
+    - C:\%PYTHON%\python.exe tests.py
