build(setup): complete transition to pyproject.toml
remove content in setup.cfg.  Add extra dependencies for test and develop to make it easier to contribute.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,7 +16,7 @@ build: false
 install:
   # - py --list
   # - py -m pip install --upgrade pip
-  - py -m pip install tox
+  - py -m pip install -e .[test]
 
 test_script:
   - py -m tox
