--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,24 @@
 repos:
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+    -   id: check-yaml
+    -   id: end-of-file-fixer
+    -   id: trailing-whitespace
+    -   id: check-toml
 -   repo: https://github.com/psf/black
-    rev: stable
+    rev: 23.9.1
     hooks:
     -   id: black
-        language_version: python3.7
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.7
+        language_version: python
+-   repo: https://github.com/PyCQA/flake8
+    rev: 6.1.0
     hooks:
     -   id: flake8
-        language: python_venv
+        language: python
         additional_dependencies: [flake8-comprehensions]
-        args: [--max-line-length=119]
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.20
+        args: [--max-line-length=999]
+-   repo: https://github.com/commitizen-tools/commitizen
+    rev: 3.8.2
     hooks:
-    -   id: isort
-        language: python_venv
+      - id: commitizen
