--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,12 +1,4 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Upload Python Package
+name: Publish to PyPI via Trusted Publisher
 
 on:
   push:
@@ -15,26 +7,33 @@ on:
     tags:
     - v*
 
-permissions:
-  contents: read
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: pypi   # environment name must match what you configure on PyPI
+    permissions:
+      id-token: write   # required for OIDC trusted publishing
+      contents: read    # minimal other permissions (you may trim more if possible)
+
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v5
+
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v6
       with:
-        python-version: '3.x'
+        python-version: 3.x
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
+        python -m pip install build
+
     - name: Build package
       run: python -m build
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+
+    - name: Publish distribution to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1.13
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
