fix: replace all py with abs path to python

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 image: Visual Studio 2022
 build_script:
-- ps: py -m pip install -e .
+- ps: C:\Python313-x64\python.exe -m pip install -e .
 test_script:
 - ps: C:\Python313-x64\python.exe tests.py -v
