--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,12 +1,13 @@
 version: 1.0.{build}
 image: Visual Studio 2022
 environment:
-- PYTHON: Python313-x64
+  matrix:
+  - PYTHON: Python313-x64
 build_script:
 - ps: >-
     $env:Path += ";C:\${Env:PYTHON}\Scripts"
-    & "C:\${Env:PYTHON}\python.exe" -m pip install -e .
+    & "C:\${Env:PYTHON}\python.exe" -m pip install -e .[develop]
 test_script:
 - ps: >-
     $env:Path += ";C:\${Env:PYTHON}\Scripts"
-    & pytest.exe tests.py -vv --junitxml=TestResults.xml
+    & pytest.exe tests.py -v --junitxml=results.xml
