--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -2,8 +2,6 @@ name: Publish to PyPI via Trusted Publisher
 
 on:
   push:
-    branches:
-    - main
     tags:
     - v*
 
@@ -33,9 +31,8 @@ jobs:
       run: python -m build
 
     - name: Publish distribution to PyPI
+      if: startsWith(github.ref, 'refs/tags/')
       uses: pypa/gh-action-pypi-publish@release/v1.13
       with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        skip_existing: true
+        skip-existing: true
         verbose: true
