--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,11 +6,6 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: check-toml
--   repo: https://github.com/psf/black
-    rev: 25.9.0
-    hooks:
-    -   id: black
-        language_version: python
 -   repo: https://github.com/PyCQA/flake8
     rev: 7.3.0
     hooks:
@@ -22,3 +17,14 @@ repos:
     rev: v4.9.1
     hooks:
       - id: commitizen
+- repo: https://github.com/abravalheri/validate-pyproject
+  rev: v0.24.1
+  hooks:
+  - id: validate-pyproject
+    files: pyproject\.toml$
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.13.0
+  hooks:
+  - id: ruff-check
+    args: [--fix]
+  - id: ruff-format
