build: update changelog
reinstate generation of changelog by commitizen.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ name = "cz_conventional_commits"
 tag_format = "v$version"
 version_scheme = "semver"
 version_provider = "pep621"
+update_changelog_on_bump = true
 major_version_zero = true
 version_files = [
     "pyproject.toml:version",
